updated CSS caps

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <title>SINDHU PILLAI</title>
 
-  <link rel="stylesheet" type="text/css" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="CSS/styles.css">
   <link rel="icon" href="Images/Sindhu.png">
 <link href="https://fonts.googleapis.com/css2?family=Alice&family=Cormorant+Garamond:wght@300&family=Sacramento&display=swap" rel="stylesheet">
 
